feat: New hex structure BREAKING CHANGE: rename response and re-structure hex project